--- a/liquidwar6/doc/scm-gdoc.texi
+++ b/liquidwar6/doc/scm-gdoc.texi
@@ -73,6 +73,55 @@ Runs the @code{scm} module test suite.
 @strong{Return value:}  1 if test is successfull, 0 on error.
 @end deftypefun
 
+@deftypefun {char *} {lw6scm_utils_to_0str} (SCM @var{string})
+@var{string}:  SCM object to convert
+
+Helper function, creates a 0 terminated string
+from a Guile string. A very common task. This function is just
+a wrapper that performs type checking, memory allocation around
+standard Guile function.
+
+@strong{Return value:}  newly allocated string, pointer must be freed.
+@end deftypefun
+
+@deftypefun {SCM} {lw6scm_utils_to_scm_str_list} (lw6sys_list_t * @var{c_list})
+@var{c_list}:  list object to convert
+
+Transform a C list containing strings to a Guile list containing
+those strings.
+
+@strong{Return value:}  Guile object, a list of strings
+@end deftypefun
+
+@deftypefun {SCM} {lw6scm_utils_to_scm_str_assoc} (lw6sys_assoc_t * @var{c_assoc})
+@var{c_assoc}:  assoc object to convert
+
+Transform a C assoc containing strings to a Guile assoc containing
+those strings.
+
+@strong{Return value:}  Guile object, an assoc of strings
+@end deftypefun
+
+@deftypefun {lw6sys_list_t *} {lw6scm_utils_to_sys_str_list} (SCM @var{list})
+@var{list}:  SCM object to convert
+
+Creates a C list from an SCM list containing strings.
+Beware of types, function will fail if members are not
+all strings, it won't convert them.
+
+@strong{Return value:}  new C list object
+@end deftypefun
+
+@deftypefun {lw6sys_assoc_t *} {lw6scm_utils_to_sys_str_assoc} (SCM @var{assoc})
+@var{assoc}:  SCM object to convert
+
+Creates a C assoc from an SCM assoc containing strings.
+Beware of types, function will fail if members are not
+all strings, it won't convert them.
+
+@strong{Return value:}  new C assoc object
+@end deftypefun
+
 @deftypefun {int} {lw6scm_c_define_gsubr} (const char * @var{name}, int @var{req}, int @var{opt}, int @var{rst}, lw6scm_func_t @var{fcn})
 @var{name}:  name of the function when called from guile
 
