--- a/liquidwar6/doc/ker-gdoc.texi
+++ b/liquidwar6/doc/ker-gdoc.texi
@@ -8,6 +8,20 @@ it to a VT100 console.
 @strong{Return value:}  dynamically allocated string.
 @end deftypefun
 
+@deftypefun {void} {lw6ker_game_state_checksum_log_set_interval} (lw6ker_game_state_t * @var{game_state}, int @var{checksum_log_interval})
+@var{game_state}:  the game_state to track
+
+@var{checksum_log_interval}:  dump interval, if 0, feature is disabled
+
+
+Debugging function used to set automatically an interval at which engine
+will log a checksum automatically. This is typically to track down where
+and when there starts to be a difference between two game_states that have
+evolved separately.
+
+@strong{Return value:}  none
+@end deftypefun
+
 @deftypefun {void} {lw6ker_cursor_reset} (lw6ker_cursor_t * @var{cursor})
 @var{cursor}:  the cursor to reset
 
