--- a/liquidwar6/ChangeLog
+++ b/liquidwar6/ChangeLog
@@ -1,3 +1,7 @@
+2012-08-04 : Christian Mauduit <ufoot@ufoot.org>
+
+	* Fixed Makefile to avoid useless doxygen regeneration, also broke snapshots.
+
 2012-08-02 : Christian Mauduit <ufoot@ufoot.org>
 
 	* Finally fixed #36907, yet more p2p script tests.
