--- a/liquidwar6/ChangeLog
+++ b/liquidwar6/ChangeLog
@@ -1,3 +1,7 @@
+2012-08-08 : Christian Mauduit <ufoot@ufoot.org>
+
+	* Added fork facility for better network tests.
+
 2012-08-06 : Christian Mauduit <ufoot@ufoot.org>
 
 	* Fixed some timeout issues in net code.
