--- a/liquidwar6/doc/sys-gdoc.texi
+++ b/liquidwar6/doc/sys-gdoc.texi
@@ -1348,9 +1348,8 @@ for instance it won't work on MS-Windows but this is rarely
 an issue as MS-Windows users are rarely concerned with
 detaching a program from a tty. Note that this isn't a
 wrapper on @code{fork}(), the return value is different,
-1 on success, 0 if failed.
 
-@strong{Return value:}  a process ID on success, 0 on failure.
+@strong{Return value:}  1 on success, 0 on failure.
 @end deftypefun
 
 @deftypefun {int} {lw6sys_daemon_stop} (char * @var{pid_file})
@@ -3264,6 +3263,27 @@ Prints a standard Liquid War compliant XML header in the given file.
 Prints a standard Liquid War 6 compliant XML footer in the given file.
 
 @strong{Return value:}  none.
+@end deftypefun
+
+@deftypefun {u_int64_t} {lw6sys_process_fork_and_call} (lw6sys_fork_func_t @var{func})
+This is not a standard fork function, it will return to
+the caller (parent) with something >0 if a child has been
+created, or 0 if failed. On the child it will launch
+the callback func, run it and exit right away.
+
+@strong{Return value:}  a process ID on success, 0 on failure.
+@end deftypefun
+
+@deftypefun {int} {lw6sys_process_kill_1_9} (u_int64_t @var{pid})
+@var{pid}:  pid to kill
+
+Kills a process with the given PID. The kill will first use a signal 1 SIGTERM
+the a signal 9 SIGKILL. This is mostly for testing, the idea is to be sure to
+vaccum after we're done. We use 64-bit for PIDs, yes, they are very likely
+32 only, but had to choose (and pid_t is a pain because for logging one would
+needed to check the length before calling printf like functions...).
+
+@strong{Return value:}  1 on success, 0 if failed
 @end deftypefun
 
 @deftypefun {int} {lw6sys_profiler_check} (int @var{verbose})
