--- a/liquidwar6/ChangeLog
+++ b/liquidwar6/ChangeLog
@@ -1,3 +1,7 @@
+2012-08-14 : Christian Mauduit <ufoot@ufoot.org>
+
+	* Added TCP check before HTTP oob requests.
+
 2012-08-12 : Christian Mauduit <ufoot@ufoot.org>
 
 	* Factorized cache code, using it for DNS too now.
