--- a/liquidwar6/ChangeLog
+++ b/liquidwar6/ChangeLog
@@ -1,5 +1,7 @@
 2012-08-14 : Christian Mauduit <ufoot@ufoot.org>
 
+	* Resetting DBs on script p2p tests.
+
 	* Passing a pointer to lw6net_socket_close instead of direct handle.
 
 	* Added TCP check before HTTP oob requests.
