--- a/liquidwar6/doc/scm-gdoc.texi
+++ b/liquidwar6/doc/scm-gdoc.texi
@@ -149,3 +149,13 @@ Loads and executes a script. Will add a log message while doing it.
 @strong{Return value:}  1 on success, 0 on failure.
 @end deftypefun
 
+@deftypefun {void *} {lw6scm_with_guile} (lw6scm_callback_t @var{func}, void * @var{data})
+@var{func}:  callback to use
+
+@var{data}:  data to pass to callback
+
+Initializes Guile and calls function within it.
+
+@strong{Return value:}  callback return value.
+@end deftypefun
+
