--- a/liquidwar6/ChangeLog
+++ b/liquidwar6/ChangeLog
@@ -1,3 +1,7 @@
+2012-08-16 : Christian Mauduit <ufoot@ufoot.org>
+
+	* Fixed test suite on Mac OS X.
+
 2012-08-15 : Christian Mauduit <ufoot@ufoot.org>
 
 	* Added weights to network connections, to favor udp over http.
